# linux-fan-utility

./: .gitignore  Cargo.toml  PKGBUILD  fanctl-daemon.service
src/: config.rs  curve.rs  hwmon.rs  lib.rs  protocol.rs
