[package]
name = "linux-fan-utility"
version = "0.1.0"
edition = "2024"
description = "A Linux fan control daemon and TUI client using hwmon sysfs"
license = "MIT"
authors = ["Pegasus Heavy Industries LLC <pegasusheavyindustries@gmail.com>"]

[[bin]]
name = "fanctl-daemon"
path = "src/bin/daemon.rs"

[[bin]]
name = "fanctl-tui"
path = "src/bin/tui.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
env_logger = "0.11"
log = "0.4"
nix = { version = "0.31", features = ["signal"] }
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.4"
tokio = { version = "1", features = ["full"] }
toml = "1.0"
